[package]
name = "bash-helper"
version = "0.1.0"
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(debug)'] }

[dependencies]
gethostname = "1.1.0"

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
codegen-units = 1  # Reduce codegen units for better optimization

