[package]
name = "read-toml-setting"
version = "0.1.0"
edition = "2024"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(debug)'] }

[dependencies]
toml = "0.9.8"

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
codegen-units = 1  # Reduce codegen units for better optimization

